--- a/sample.html
+++ b/sample.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Sample test file </h1>
     <h1>This file is new and second heading</h1>
+    <h1>Welcome to the world of DevOps.</h1>
 </body>
 </html>
