add new heading with numbers

--- a/sample.html
+++ b/sample.html
@@ -9,5 +9,6 @@
     <h1>Sample test file </h1>
     <h1>This file is new and second heading</h1>
     <h1>Welcome to the world of DevOps.</h1>
+    <h1>Welcome to the world of DevOps1234565.</h1>
 </body>
 </html>
